--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-services:
-  - name: web
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -b 0.0.0.0:$PORT app:app
+flask
+requests
 
