--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,6 @@ services:
     env: python
     buildCommand: |
       pip install -r requirements.txt
+      pip install gunicorn  # Добавьте эту строку для установки Gunicorn
     startCommand: gunicorn -b 0.0.0.0:$PORT app:app
 
